--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@react-three/drei": "^9.109.5",
     "gsap": "^3.12.5",
     "axios": "^1.7.2",
-    "react-chatbot-kit": "^2.2.2",
+    "framer-motion": "^11.0.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1"
   },
   "overrides": {
@@ -24,21 +25,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
